--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "files": [
     "*.d.ts",
+    "bfs.js",
     "index.js",
     "dfs.js"
   ],
@@ -53,6 +54,7 @@
     "graphology-types": ">=0.19.0"
   },
   "dependencies": {
-    "graphology-utils": "^1.8.0"
+    "graphology-utils": "^1.8.0",
+    "mnemonist": "^0.38.0"
   }
 }
