--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@yomguithereal/eslint-config": "^4.0.0",
     "eslint": "^7.13.0",
     "graphology": "^0.19.2",
+    "graphology-generators": "^0.11.0",
     "graphology-types": "0.19.0",
     "mocha": "^8.2.1"
   },
